--- a/src/app/application-onboarding/application/application-creation/log-template-config/log-provider/log-provider.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template-config/log-provider/log-provider.component.html
@@ -1,1 +1,50 @@
-<p>log-provider works!</p>
+<div *ngIf="logProviderService.isProviderParamsLoaded">
+  <opsmx-input [params]="logProviderService.templateNameParams"></opsmx-input>
+  <div class="text-divider">
+    <h4>Logs Monitoring </h4>
+  </div>
+  <opsmx-select [params]="logProviderService.logProviderParams" (changed)="onChangeProvider($event)"></opsmx-select>
+  <!--kubernetes-->
+  <opsmx-input [params]="logProviderService.namespaceParams" (changed)="onChange($event)"
+    *ngIf="logProviderService.logProviderParams.formControl.value == 'kubernetes'"></opsmx-input>
+  <!--kubernetes-->
+
+  <!-- other than kubernetes -->
+  <opsmx-select [params]="logProviderService.logAccountParams" (changed)="onChangeAccounts($event)"
+    *ngIf="logProviderService.logProviderParams.formControl.value != 'kubernetes' && logProviderService.reloadAccount">
+  </opsmx-select>
+  <!-- other than kubernetes -->
+
+  <!-- elastic search-->
+  <div *ngIf="logProviderService.logProviderParams.formControl.value == 'elasticsearch'">
+    <div class="text-divider">
+      <h4>Elastic Configuration</h4>
+    </div>
+    <opsmx-input [params]="logProviderService.indexPatternParams" (changed)="onChange($event)"></opsmx-input>
+    <opsmx-input [params]="logProviderService.kibanaIndexParams" (changed)="onChange($event)"></opsmx-input>
+
+
+    <mat-slide-toggle class="example-margin mt-3" [color]="logProviderService.color" (change)="enableRegExp($event)"
+      [(ngModel)]="logProviderService.regExpFilterChecked" [disabled]="logProviderService.regExpFilterDisabled">
+      Custom regular expression filter Required
+    </mat-slide-toggle>
+
+    <div *ngIf="logProviderService.regExpFilterChecked">
+      <opsmx-input [params]="logProviderService.regularExpressionParams" (changed)="onChange($event)"></opsmx-input>
+      <opsmx-select *ngIf="logProviderService.reloadResponseKey" [params]="logProviderService.responseKeyParams"
+        (changed)="onChange($event)"></opsmx-select>
+    </div>
+    <!-- elastic search-->
+  </div>
+  <hr class="ml-0 mt-3 mb-3" />
+
+  <div>
+    <mat-slide-toggle class="example-margin mt-3" [color]="logProviderService.color" (change)="enableAutoBase($event)"
+      [(ngModel)]="logProviderService.autoBaselinechecked" [disabled]="logProviderService.autoBaseLinedisabled">
+      Autobaseline
+    </mat-slide-toggle>
+    <opsmx-helptext [params]="logProviderService.autoBaseHelpParams"></opsmx-helptext>
+  </div>
+
+  <opsmx-select [params]="logProviderService.senstivityParams" (changed)="onChange($event)"></opsmx-select>
+</div>
