--- a/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
+++ b/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
@@ -13,5 +13,6 @@
   [yAxisLabel]="yAxisLabel"
   [legendPosition]="legendPosition"
   (select)="onSelect($event)"
+  [xAxisTickFormatting]="axisFormat"
   style="fill: #999999;">
 </ngx-charts-bar-horizontal-stacked>
