added padding for stacked and horizontal bar chart

--- a/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
+++ b/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
@@ -14,5 +14,6 @@
   [legendPosition]="legendPosition"
   (select)="onSelect($event)"
   [xAxisTickFormatting]="axisFormat"
+  [barPadding]="22"
   style="fill: #999999;">
 </ngx-charts-bar-horizontal-stacked>
