--- a/src/app/charts/horizontal-bar-chart/horizontal-bar-chart.component.html
+++ b/src/app/charts/horizontal-bar-chart/horizontal-bar-chart.component.html
@@ -16,5 +16,6 @@
   (deactivate)="onDeactivate($event)"
   [roundEdges]="roundEdgesType"
   [xAxisTickFormatting]="axisFormat"
+  [barPadding]="22"
   style="fill: #999999;">
 </ngx-charts-bar-horizontal>
