--- a/src/styles.less
+++ b/src/styles.less
@@ -2133,3 +2133,12 @@ td .table-sm input, td .table-sm select, td .table-sm{
 	.mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar {
 		background-color: #259bf3 !important;
 	}
+	.mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+		background-color: rgb(0 155 250);
+	}
+	.mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+		background-color: #0769aa;
+	}
+	.mat-slide-toggle.mat-checked .mat-ripple-element {
+		background-color: #0769aa;
+	}
