--- a/src/app/cd-dashboard/cd-dashboard.component.html
+++ b/src/app/cd-dashboard/cd-dashboard.component.html
@@ -34,7 +34,7 @@
               
              
 
-                  <div class="dropdown dropdown-icon-remove">
+                  <!-- <div class="dropdown dropdown-icon-remove">
                     <button class="btn btn-default px-2 dropdown-toggle" type="button" id="dropdownMenuButton"
                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fas fa-ellipsis-v"></i>
@@ -48,7 +48,7 @@
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="#">Remove widget</a>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
                 <!-- /.graph-controls -->
               </div>
@@ -101,18 +101,18 @@
                     </select>
                   </div>
 
-                  <div class="dropdown dropdown-icon-remove">
+                  <!-- <div class="dropdown dropdown-icon-remove">
                     <button class="btn btn-default px-2 dropdown-toggle" type="button" id="dropdownMenuButton"
                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <i class="fas fa-ellipsis-v"></i>
                     </button>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton"> -->
                       <!-- <a class="dropdown-item" href="#">Hide labels</a>
                       <div class="dropdown-divider"></div> -->
-                      <a class="dropdown-item" href="#">Add widget</a>
+                      <!-- <a class="dropdown-item" href="#">Add widget</a>
                    
                     </div>
-                  </div>
+                  </div> -->
 
                   <!-- <div class="mr-3">
                     <select class="form-control" name ="range" id="range" [(ngModel)]="selectedRange">
@@ -135,7 +135,7 @@
                   {{widget.name}}
                 </div>
                 <!-- /.graph-title -->
-                <div class="graph-controls d-flex">
+                <!-- <div class="graph-controls d-flex">
                   <div class="dropdown dropdown-icon-remove">
                     <button class="btn btn-link text-muted px-2 dropdown-toggle" type="button" id="dropdownMenuButton"
                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -151,7 +151,7 @@
                       <a class="dropdown-item" href="#">Remove widget</a>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
               <div class="graph-body" #subGraph>
                 <div *ngIf="widgetChartLoading[widgetindex]" style="height: 260px">
@@ -204,11 +204,11 @@
 
         <!-- #################### Add widget charts codes start ############################ -->
 
-        <!-- <div class="col-sm-4 px-1 mb-2 cdDashboard">
+        <div class="col-sm-4 px-1 mb-2 cdDashboard">
           <div class="card border-0">
             <div class="card-body">
               <div class="graph-header d-flex align-items-center justify-content-between">
-                <div class="graph-title">
+                <div class="graph-title" style="color: #212529">
                   <img src="../../assets/images/drag-dots.png" alt="dots" />
                   Add a new chart widget
                 </div>
@@ -239,7 +239,7 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
       <!-- #################### Add widget charts codes end ############################ -->
 
