--- a/projects/forms/src/lib/select/select.component.css
+++ b/projects/forms/src/lib/select/select.component.css
@@ -10,3 +10,9 @@
     border: 1px #259bf3 solid;
     outline: #ccc;
 }
+.control-label {
+    color: rgb(0 0 0 / 0.86);
+}
+select, option {
+    color: rgb(0 0 0 / 0.86) !important;
+}
