--- a/src/app/application-onboarding/application/application-creation/log-template-config/log-tags/log-tags.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template-config/log-tags/log-tags.component.html
@@ -31,7 +31,7 @@
                     <i class="fas fa-plus"></i>
                 </a>
             </span>
-            <span class="ml-2 " (click)="removeTags()" title="Delete Tags">
+            <span class="ml-2 " (click)="removeTags()" title="Delete Tags" style="color: red;">
                 <a class="btn-link">
                     <i class="mt_custom-3 far fa-trash-alt"></i>
                 </a>
