--- a/src/styles.less
+++ b/src/styles.less
@@ -2133,18 +2133,19 @@ td .table-sm input, td .table-sm select, td .table-sm{
 	.mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar {
 		background-color: #259bf3 !important;
 	}
-<<<<<<< HEAD
 	.mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
-		background-color: rgb(0 155 250);
+		background-color: rgba(0,123,255,0.54);
 	}
 	.mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
-		background-color: #0769aa;
+		background-color: #007bff;
 	}
 	.mat-slide-toggle.mat-checked .mat-ripple-element {
 		background-color: #0769aa;
-=======
+	}
 	.standard-popup .mat-dialog-container {
 		padding: 10px 24px 20px 24px;
 		overflow: hidden;
->>>>>>> 8faafa0 (UI fixes)
+	}
+	mat-slide-toggle label {
+		color: rgb(0 0 0 / 0.86) !important;
 	}
