--- a/src/styles.less
+++ b/src/styles.less
@@ -2149,3 +2149,6 @@ td .table-sm input, td .table-sm select, td .table-sm{
 	mat-slide-toggle label {
 		color: rgb(0 0 0 / 0.86) !important;
 	}
+	.log-template-json-editor .ace-jsoneditor.ace_editor {
+		min-height: 443px !important;
+	}
