--- a/src/app/application-onboarding/application/application-creation/log-template-config/log-template-editor/log-template-editor.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template-config/log-template-editor/log-template-editor.component.html
@@ -1,1 +1,1 @@
-<json-editor [options]="editorOptions" [data]="data" (change)="showJson($event)"></json-editor>
+<json-editor class="log-template-json-editor" [options]="editorOptions" [data]="data" (change)="showJson($event)"></json-editor>
