--- a/src/app/application-onboarding/data-source/create-data-source/create-data-source.component.less
+++ b/src/app/application-onboarding/data-source/create-data-source/create-data-source.component.less
@@ -13,7 +13,7 @@
 	line-height: 1.2;
 	border-radius: 8px;
 	padding: 5px;
-	background-color: #ecf2f7;
+	// background-color: #ecf2f7;
 	border: 1px solid #cccccc;
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -38,8 +38,8 @@
 	margin-top: 6px;
 }	
 .box-icon .bi-lbl img{
-	filter: grayscale(80);
-	opacity: 0.7;
+	// filter: grayscale(80);
+	opacity: 0.9;
 }
 .box-icon input:checked + label{
 	background-color: #d9f5ff;
@@ -53,4 +53,6 @@
 .restrictSelect{
 	pointer-events: none !important;
 }
-
+.box-icon-group {
+	text-align: center;
+}
