summary execution of pipelines and added datarange filter

--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -158,3 +158,10 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
 	.emptyTableError{
 		padding: 300px 0px;
 	}
+	
+	// .dropdown-menu[x-placement^=bottom], .dropdown-menu[x-placement^=left], .dropdown-menu[x-placement^=right], .dropdown-menu[x-placement^=top] {
+	// 	left: auto !important;
+	// }
+	.cv_name{
+		font-size: 14px;;
+	}
