--- a/src/styles.less
+++ b/src/styles.less
@@ -288,6 +288,14 @@ span{
 .chart_value{
 	padding-top: 15px;
 }
+.cv_normal{
+	background: #c3d3e1;
+	color: #322728;
+}
+.cv_normal .cv_heighlight{
+	color: #526e86;
+	padding-bottom: 5px;
+}
 .cv_low{
 	background: #ffcfd2;
 	color: #322728;
@@ -298,22 +306,26 @@ span{
 }
 .cv_medium{
 	background: #fbe399;
-	color: #917c3e
+	color: #233123
 }
 .cv_low .cv_heighlight{
 	color: #d90000;
+	padding-bottom: 5px;
 }
 .cv_alert{
 	color: #005320;
 }
 .cv_alert .cv_heighlight{
 	color: #00a025;
+	padding-bottom: 5px;
 }
 .cv_high .cv_heighlight{
 	color: #00a025;
+	padding-bottom: 5px;
 }
 .cv_medium .cv_heighlight{
-	color: #ffc107;
+	color: #bc8f0a;
+	padding-bottom: 5px;
 }
 .cv_heighlight{
 	font-weight: 700;
